Separate projects for Plex/Spotify

--- a/MusicCrawler.Plex/MusicCrawler.Plex.csproj
+++ b/MusicCrawler.Plex/MusicCrawler.Plex.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <TargetFramework>net7.0</TargetFramework>
@@ -7,11 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <Folder Include="Environment\" />
+      <ProjectReference Include="..\MusicCrawler.Lib\MusicCrawler.Lib.csproj" />
     </ItemGroup>
 
 </Project>
