--- a/MusicCrawler.Spotify/MusicCrawler.Spotify.csproj
+++ b/MusicCrawler.Spotify/MusicCrawler.Spotify.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <TargetFramework>net7.0</TargetFramework>
@@ -11,7 +11,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="Environment\" />
+      <ProjectReference Include="..\MusicCrawler.Lib\MusicCrawler.Lib.csproj" />
     </ItemGroup>
 
 </Project>
