created fake ISpotifyApi

--- a/MusicCrawler.Fakes/MusicCrawler.Fakes.csproj
+++ b/MusicCrawler.Fakes/MusicCrawler.Fakes.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\MusicCrawler.Lib\MusicCrawler.Lib.csproj" />
+      <ProjectReference Include="..\MusicCrawler.Spotify\MusicCrawler.Spotify.csproj" />
     </ItemGroup>
 
 </Project>
