--- a/server/MusicCrawler.Backend/MusicCrawler.Backend.csproj
+++ b/server/MusicCrawler.Backend/MusicCrawler.Backend.csproj
@@ -14,6 +14,7 @@
     <ItemGroup>
         <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="9.0.0" />
         <PackageReference Include="HotChocolate.AspNetCore" Version="13.9.0" />
+        <PackageReference Include="MongoDB.Driver" Version="2.24.0" />
         <PackageReference Include="NSubstitute" Version="5.1.0" />
     </ItemGroup>
 
