--- a/server/MusicCrawler.Backend/MusicCrawler.Backend.csproj
+++ b/server/MusicCrawler.Backend/MusicCrawler.Backend.csproj
@@ -21,6 +21,7 @@
     <ItemGroup>
         <ProjectReference Include="..\MusicCrawler.Fakes\MusicCrawler.Fakes.csproj" />
         <ProjectReference Include="..\MusicCrawler.Lib\MusicCrawler.Lib.csproj" />
+        <ProjectReference Include="..\MusicCrawler.MongoDB\MusicCrawler.MongoDB.csproj" />
         <ProjectReference Include="..\MusicCrawler.Plex\MusicCrawler.Plex.csproj" />
         <ProjectReference Include="..\MusicCrawler.Spotify\MusicCrawler.Spotify.csproj" />
     </ItemGroup>
