--- a/server/MusicCrawler.Fakes/MusicCrawler.Fakes.csproj
+++ b/server/MusicCrawler.Fakes/MusicCrawler.Fakes.csproj
@@ -8,7 +8,13 @@
 
     <ItemGroup>
       <ProjectReference Include="..\MusicCrawler.Lib\MusicCrawler.Lib.csproj" />
+      <ProjectReference Include="..\MusicCrawler.MongoDB\MusicCrawler.MongoDB.csproj" />
       <ProjectReference Include="..\MusicCrawler.Spotify\MusicCrawler.Spotify.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="Mongo2Go" Version="3.1.3" />
+      <PackageReference Include="MongoDB.Driver" Version="2.24.0" />
     </ItemGroup>
 
 </Project>
