--- a/src/MusicCrawler.Backend/MusicCrawler.Backend.csproj
+++ b/src/MusicCrawler.Backend/MusicCrawler.Backend.csproj
@@ -14,6 +14,8 @@
     <ItemGroup>
         <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="9.0.0" />
         <PackageReference Include="MongoDB.Driver" Version="2.24.0" />
+        <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.0" />
+        <PackageReference Include="Swashbuckle.AspNetCore" Version="9.0.3" />
     </ItemGroup>
 
     <ItemGroup>
