Basic Blazor app that shows first 25 artists

--- a/src/AppHost/AppHost.csproj
+++ b/src/AppHost/AppHost.csproj
@@ -17,6 +17,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\MusicCrawler.Backend\MusicCrawler.Backend.csproj" />
+    <ProjectReference Include="..\MusicCrawler.Frontend\MusicCrawler.Frontend.csproj" />
   </ItemGroup>
 
 </Project>
