--- a/src/MusicCrawler.Backend/MusicCrawler.Backend.csproj
+++ b/src/MusicCrawler.Backend/MusicCrawler.Backend.csproj
@@ -12,6 +12,7 @@
     </ItemGroup>
 
     <ItemGroup>
+        <PackageReference Include="Aspire.StackExchange.Redis.DistributedCaching" Version="9.3.1" />
         <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="10.0.0" />
         <PackageReference Include="MongoDB.Driver" Version="3.4.0" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.7" />
