--- a/src/MusicCrawler.Lib/MusicCrawler.Lib.csproj
+++ b/src/MusicCrawler.Lib/MusicCrawler.Lib.csproj
@@ -9,12 +9,7 @@
     <ItemGroup>
       <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
       <PackageReference Include="Noggog.Autofac" Version="2.73.0" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <Reference Include="Microsoft.Extensions.Caching.Abstractions">
-        <HintPath>..\..\..\..\..\..\..\Program Files\dotnet\shared\Microsoft.AspNetCore.App\9.0.6\Microsoft.Extensions.Caching.Abstractions.dll</HintPath>
-      </Reference>
+        <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="9.0.8" />
     </ItemGroup>
 
 </Project>
