--- a/src/MusicCrawler.Lib/MusicCrawler.Lib.csproj
+++ b/src/MusicCrawler.Lib/MusicCrawler.Lib.csproj
@@ -12,4 +12,8 @@
         <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="9.0.8" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\MusicCrawler.Interfaces\MusicCrawler.Interfaces.csproj" />
+    </ItemGroup>
+
 </Project>
