--- a/src/MusicCrawler.Frontend/MusicCrawler.Frontend.csproj
+++ b/src/MusicCrawler.Frontend/MusicCrawler.Frontend.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\MusicCrawler.Lib\MusicCrawler.Lib.csproj" />
+    <ProjectReference Include="..\MusicCrawler.Interfaces\MusicCrawler.Interfaces.csproj" />
     <ProjectReference Include="..\ServiceDefaults\ServiceDefaults.csproj" />
   </ItemGroup>
 
