--- a/src/MusicCrawler.Interfaces/MusicCrawler.Interfaces.csproj
+++ b/src/MusicCrawler.Interfaces/MusicCrawler.Interfaces.csproj
@@ -1,9 +1,13 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <TargetFramework>net9.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
     </PropertyGroup>
+
+    <ItemGroup>
+        <PackageReference Include="Noggog.Autofac" Version="2.73.0" />
+    </ItemGroup>
 
 </Project>
