--- a/src/MusicCrawler.Spotify/MusicCrawler.Spotify.csproj
+++ b/src/MusicCrawler.Spotify/MusicCrawler.Spotify.csproj
@@ -11,7 +11,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\MusicCrawler.Lib\MusicCrawler.Lib.csproj" />
+      <ProjectReference Include="..\MusicCrawler.Interfaces\MusicCrawler.Interfaces.csproj" />
     </ItemGroup>
 
 </Project>
